--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Currency Converter | @arijitbhowmik</title>
 </head>
 <body>
+    <div class="loader"></div>
     <div class="container">
         <h2>Currency Converter</h2>
         <form action="">
