--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <form action="">
             <div class="amount">
                 <p id="enter-amt">Enter amount</p>
-                <input type="text" value="1" placeholder="Enter currency">
+                <input type="number" value="1" placeholder="Enter currency" required>
             </div>
 
             <div class="dropdown">
